tests/errors/sem_before_declare.java
public class sem_before_declare {
    public static void main(String[] args) {
        a = a + 1;
        int a = 0;
    }
}
